--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: "Common Proxy Service Provider Checkin"
 
 on:
   schedule:
-    - cron: "0 14 * * *"  # scheduled at 06:00 (UTC+8) everyday
+    - cron: "0 1 * * *"  # scheduled at 01:00 (UTC), 09:00 (UTC+8) everyday
   workflow_dispatch:
 
 env:
